--- a/examples/reactive.html
+++ b/examples/reactive.html
@@ -10,7 +10,7 @@
   <script src="../packages/reactivity//dist/reactivity.global.js"></script>
   <script>
     const { reactive, shallowReactive, readonly, shallowReadonly }  = VueReactivity
-    const state = shallowReadonly({
+    const state = reactive({
       a: 1,
       obj: {
         b: 2
