--- a/examples/createApp.html
+++ b/examples/createApp.html
@@ -25,7 +25,7 @@
           }
         }
       }
-      // debugger
+      debugger
       let app = createApp(App)
       app.mount('#app')
       // console.log(proxy)
